# scovil

./: CommonStruckt.md  Introduction.md  ProjectHome.md
src/: CMakeLists.txt  camera.cpp  init.cpp  init.h  main_cycle.cpp  main_cycle.h  mathlib.h  object.cpp  object.h  object_dot.cpp  object_dot.h  object_line.cpp  object_line.h  object_quad.cpp  object_quad.h  object_quads.h  object_scene.cpp  object_scene.h  object_triangle.cpp  object_triangle.h  sceneobject.cpp  sceneobject.h  scovil.h  texture.h
src/examples/cpp/: CMakeLists.txt  example1.cpp  example2.cpp  example4.cpp  example5.cpp
src/examples/python/: example1.py  example2.py  example3.py  example4.py
src/examples/ruby/: example1.rb
src/inter/: CMakeLists.txt  change_camera.cpp  change_camera.h  change_dot.cpp  change_dot.h  change_line.cpp  change_line.h  change_quad.cpp  change_quad.h  change_quads.cpp  change_quads.h  change_scene.h  change_triangle.cpp  change_triangle.h  options.cpp  options.h
src/python/: CMakeLists.txt  pyinterscovil.i  pyscovil.py  pyscovil_quad.py
src/ruby/: rubyscovil.rb  rubyscovil_camera.rb  rubyscovil_global.rb  rubyscovil_quad.rb  rubyscovil_triangle.rb  ruinterscovil.i
trunk/: CMakeLists.txt
trunk/src/: CMakeLists.txt  camera.h  init.cpp  init.h  main_cycle.cpp  main_cycle.h  mathlib.cpp  mathlib.h  object.cpp  object.h  object_dot.cpp  object_dot.h  object_line.cpp  object_line.h  object_quad.cpp  object_quad.h  object_quads.cpp  object_quads.h  object_scene.cpp  object_scene.h  object_triangle.cpp  object_triangle.h  scovil.h  texture.cpp
trunk/src/examples/cpp/: example1.cpp  example2.cpp  example3.cpp  example4.cpp
trunk/src/examples/python/: example1_2.py  example2.py  example3.py  speedtest_pyopengl.py
trunk/src/examples/ruby/: example1.rb  example2.rb  example3.rb
trunk/src/inter/: CMakeLists.txt  change_dot.cpp  change_dot.h  change_line.cpp  change_line.h  change_quad.cpp  change_quad.h  change_quads.cpp  change_quads.h  change_scene.cpp  change_scene.h  change_texture.cpp  change_texture.h  change_triangle.cpp  change_triangle.h  options.cpp  options.h
trunk/src/python/: CMakeLists.txt  pyinterscovil.i  pyscovil.i  pyscovil.py  pyscovil_camera.py  pyscovil_dot.py  pyscovil_global.py  pyscovil_line.py  pyscovil_quad.py  pyscovil_texture.py  pyscovil_triangle.py
trunk/src/ruby/: CMakeLists.txt  rubyscovil_dot.rb  rubyscovil_line.rb
wiki/: CommonStruckt.wiki  Introduction.wiki
