ADD_EXECUTABLE(example1 example1.cpp)
TARGET_LINK_LIBRARIES(example1 scovil ${OPENGL_LIBRARIES} ${SDL_LIBRARY} ${SDLIMAGE_LIBRARY} util)
ADD_EXECUTABLE(example2 example2.cpp)
TARGET_LINK_LIBRARIES(example2 scovil ${OPENGL_LIBRARIES} ${SDL_LIBRARY} ${SDLIMAGE_LIBRARY} util)

INCLUDE_DIRECTORIES(${PNG_INCLUDE_DIR} ${PYTHON_INCLUDE_PATH} ${RUBY_INCLUDE_PATH} ${OPENGL_INCLUDE_DIR} ${SDL_INCLUDE_DIR})